# py-microservice

./: .dockerignore  .env  .env.intregrated-test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  authenticated_test.sh  docker-compose.yaml  docker-compose.yml  init-dev.sh  main.py  main_dev.py  mypy.ini  pyproject.toml  pytest.ini  run.sh  toto.json
docker-compose/: realm-export.json
myproject/: __init__.py
myproject/application/: bootstrap.py  health_endpoint.py  user_endpoint.py
myproject/application/logger/: logger_config.py
myproject/application/security/: oidc.py  oidc_config.py  token.py
pymicroservice/kombu/: register_pydantic.py
pymicroservice/logger/: logger_config.py
pymicroservice/security/: oidc.py  oidc_config_loader.py  token.py
pymicroservice/worker/: register_pydantic.py
sample/: main_api.py  main_worker.py
sample/application/: bootstrap.py  health_endpoint.py  user_endpoint.py
sample/application/user/: tasks.py  user_endpoint.py
sample/application/worker/: worker_endpoint.py
sample/domain/: user_model.py
sample/infrastructure/: celery.py
tests/: health_test.py  usefull_authenticated_test.sh  user_enpoint_test.py
tests/fully-integrated/: user_endpoint_test.py
tests/unit/: user_enpoint_test.py
