[project]
name = "py-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "cryptography>=44.0.0",
    "fastapi[standard]>=0.115.6",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies= [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "ruff>=0.8.0",
]
